--- a/app/src/main/res/xml/widget.xml
+++ b/app/src/main/res/xml/widget.xml
@@ -6,5 +6,5 @@
     android:minWidth="220dp"
     android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal"
-    android:updatePeriodMillis="3600000">
+    android:updatePeriodMillis="10000">
 </appwidget-provider>
